--- a/web project/Views/Menus/Edit.cshtml
+++ b/web project/Views/Menus/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="DishTypee" class="control-label"></label>
+                <input asp-for="DishTypee" class="form-control" />
+                <span asp-validation-for="DishTypee" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -44,6 +49,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
