--- a/web project/Views/Home/Index.cshtml
+++ b/web project/Views/Home/Index.cshtml
@@ -2,8 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="/css/Index.css" />
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Image Banner</title>
+
+</head>
+<body >
+
+    <h1 class="container">Welcome To YTRIBLE-A</h1>
+    <div id="banner-container">
+        <img id="banner" src="/pics/banner.jpg" />
+        </div>
+</body>
+</html>
