--- a/web project/Views/Home/About.cshtml
+++ b/web project/Views/Home/About.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/About.css" />
     <div class="container">
         <h1 id="AHMN">ABOUT US</h1>
-        <h2 class="kit"> MY KITCHEN</h2>
+        <h2 class="kit"> YTRIBLE-A</h2>
     </div>
     <meta charset="UTF-8" />
     <title>ABOUT US </title>
@@ -73,10 +73,10 @@
             <div class="photo">
                 <div class="card" style="width: 600px; border-color:bisque; border-width: 3px; border-radius:5%;
      box-shadow: -21px 20px 16px 3px grey;">
-                    <img src="\pics\1.jpg" class="card-img-top" style="border-radius: 25px;">
+                    <img src="\pics\kitchen.jpg" class="card-img-top" style="border-radius: 25px;">
                     <div class="card-body" style="background-color:honeydew;border-radius: 25px;">
                         <!-- <h5 class="card-title"></h5> -->
-                        <p class="card-text">THAT'S HOW IT STARTED IN 2008</p>
+                        <p class="card-text">Don't be satisfied with anything less than perfect quality!</p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
@@ -85,9 +85,9 @@
             <div class="photo2">
                 <div class="card" style="width: 600px; border-color:bisque;
  border-width: 3px; border-radius:5%; box-shadow: 21px 10px 10px 10px grey;">
-                    <img src="\pics\2.jpg" class="card-img-top" style="border-radius: 25px;">
+                    <img src="\pics\food.jpg" class="card-img-top" style="border-radius: 25px;">
                     <div class="card-body" style="background-color:honeydew; border-radius: 25px;">
-                        <p class="card-text">THAT'S HOW IT BACOMES NOW IN 2023</p>
+                        <p class="card-text">Choose your own adventure with variety</p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
                 </div>
@@ -97,7 +97,7 @@
     </div>
     <p class="end">
 
-        YOU KAN MAKE YOUR ORDER NOW !!
+        YOU cAN MAKE YOUR ORDER NOW !!
 
     </p>
 </body>
